[gd_scene load_steps=10 format=3 uid="uid://by4eyhut4xpje"]

[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_ydvwm"]
[ext_resource type="PackedScene" uid="uid://b2jugl127cajs" path="res://scenes/component/health_component.tscn" id="2_3j83y"]
[ext_resource type="PackedScene" uid="uid://d1504sw3tcmdl" path="res://scenes/abilities/sword_ability/sword_ability_controller.tscn" id="2_tl68j"]
[ext_resource type="Texture2D" uid="uid://csek8mruetvtq" path="res://scenes/game_objects/player/player.png" id="3_novm1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjj3u"]
bg_color = Color(0.239216, 0.129412, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtiee"]
bg_color = Color(0.254902, 0.886275, 0.705882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.239216, 0.129412, 0.176471, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_t7une"]
radius = 26.0192

[sub_resource type="CircleShape2D" id="CircleShape2D_fpnqd"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ltx3s"]
radius = 5.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health_component") groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_ydvwm")
health_component = NodePath("HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_3j83y")]

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_tl68j")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_jjj3u")
theme_override_styles/fill = SubResource("StyleBoxFlat_jtiee")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_t7une")

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_fpnqd")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("3_novm1")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ltx3s")
